# TFG_UO271080

./: 1.tfgproject.js  2.tfgproject.js  README.md  example.json  index.html  index_bg.js  index_bg.wasm  loaderio-f354a160905722053a14533f8b7a9e8b.txt  package.json  tfgproject.js  tfgproject.wasm  yashe.js  yew_wasm_pack_template.d.ts  yew_wasm_pack_template.js  yew_wasm_pack_template_bg.wasm  yew_wasm_pack_template_bg.wasm.d.ts
assembly-rdf-shape/: .env  Cargo.toml  LICENSE_MIT  SCRIPT.js  bootstrap.js  package-lock.json  package.json  style.scss  tailwind.config.js  webpack.config.js
assembly-rdf-shape/src/: app.rs  lib.rs  test.rs  yate.scss
assembly-rdf-shape/src/app/: api.rs  examples_manager.rs  rdf_manager.rs  rdf_properties.rs  search_component.rs
assembly-rdf-shape/src/components/: editors.rs  header.rs  mod.rs  modal.rs  result_table.rs  search_bar.rs
assembly-rdf-shape/src/tests/: mod.rs  tests_i_1.rs  tests_i_2.rs  tests_i_3.rs  tests_i_4.rs  tests_i_6.rs  tests_i_7.rs  tests_u_1.rs  tests_u_2.rs  tests_u_3.rs
assembly-rdf-shape/static/: example.json  index.html
assembly-rdf-shape/tests/: web.rs
snippets/yew-wasm-pack-template-fa876ff615dc94e4/: inline0.js  inline1.js  inline2.js  inline3.js  inline4.js  inline5.js  inline6.js  inline7.js
snippets/yew-wasm-pack-template-fa876ff615dc94e4/src/: yashe.js
static/: example1.json  example2.json  example3.json
