[package]
name = "yew-wasm-pack-template"
version = "0.2.0"
authors = ["Yew Maintainers <maintainers@yew.rs"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.19"
strum_macros = "0.19"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17"
gloo = "0.2" 
oxttl = "0.1.0-alpha.6"
oxrdf = "0.1.7"
# shex_compact = "0.0.11"
# shex_validation = "0.0.11"
# shex_ast = "0.0.11"


[dev-dependencies]
wasm-bindgen-test = "0.3"
gloo = "0.2" 

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
  "Element"
]

[dependencies.getrandom]
version = "0.2.15"
features = ["js"]
