[package]
name = "wasm_rdfshape_validator"
version = "0.2.0"
authors = ["Yew Maintainers <maintainers@yew.rs"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version="0.17"}
dotenv = "0.15"
log = "0.4"
strum = "0.19"
strum_macros = "0.19"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
reqwasm = "0.5.0"
gloo-net = "0.5.0"
wasm-bindgen-futures = "0.4.30"
serde_json="1.0.81"
serde ={ version = "1.0.37",features = ["derive"]}

[dev-dependencies]
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
wasm-bindgen-test = "0.3"
gloo = "0.2" 
failure = "0.1.8"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
  "Element",
  "FileReader",
  "Blob",
  "HtmlAnchorElement"
]

[dependencies.getrandom]
version = "0.2.15"
features = ["js"]
